--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@zxing/browser": "^0.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "react-zxing": "^2.1.0",
